--- a/src/pages/member page/MemberPage.css
+++ b/src/pages/member page/MemberPage.css
@@ -9,7 +9,7 @@
     width: 100%;
     height: 20%;
     padding: 1% 0%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: flex;
     justify-content: start;
     align-items: center;
