--- a/src/pages/gym dashboard/PageContainer.css
+++ b/src/pages/gym dashboard/PageContainer.css
@@ -2,5 +2,7 @@
     height: 89.7vh;
     width: 100%;
     overflow-y: auto;
+    display: flex;
+    justify-content: center;
     /* border: 1px solid red; */
 }
