--- a/src/pages/member page/MemberPage.css
+++ b/src/pages/member page/MemberPage.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     /* border: 2px solid blue; */
-    /* overflow-y: auto; */
+    overflow-y: auto;
 }
 
 .memberPageContainer .infoCardContainer {
