--- a/src/pages/gym dashboard/PageContainer.css
+++ b/src/pages/gym dashboard/PageContainer.css
@@ -1,7 +1,7 @@
 .PageContainer {
     height: 89.7vh;
     width: 100%;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     display: flex;
     justify-content: center;
     /* border: 1px solid red; */
