--- a/src/pages/member page/AddMember.css
+++ b/src/pages/member page/AddMember.css
@@ -1,8 +1,7 @@
 .addMemberContainer {
-    height: 50%;
-    width: 90%;
+    width: 97%;
     /* border: 2px solid brown; */
-    margin: 3.5% 1.5% 1.5% 1.5%;
+    margin: 0% 1.5% 1.5% 1.5%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 12px;
     background: #fff;
@@ -44,11 +43,11 @@
 }
 
 .addMemberContainer .formContainer {
-    margin: 1.5% 1.5%;
+    margin: 2.5% 1.5%;
     width: 100%;
     padding-bottom: 1.4%;
     display: grid;
-    grid-gap: 2%;
+    grid-gap: 5%;
     grid-template-columns: 40% 40%;
     grid-auto-rows: auto;
     justify-content: center;
@@ -73,11 +72,13 @@
 }
 
 .addMemberContainer select {
+    margin-left: 1%;
     font-size: 0.9em;
     font-weight: 400;
 }
 
 .addMemberContainer .buttonContainer {
+    width: 15%;
     margin-top: 1%;
     font-size: 0.5em;
     font-weight: 500;
@@ -85,7 +86,8 @@
     /* To keep buttons side by side */
     grid-row: 4;
     grid-column: 1/3;
-    gap: 10%;
+    justify-content: center;
+    gap: 12%;
     justify-self: center;
     align-self: end;
 }
