--- a/src/pages/member page/MemberTable.css
+++ b/src/pages/member page/MemberTable.css
@@ -81,6 +81,11 @@
     cursor: pointer;
 }
 
+.tableContainer .pagination {
+    margin-bottom: 0.5%;
+    /* border: 1px solid blue */
+}
+
 .tableContainer .pagination p {
     display: flex;
     justify-content: center;
