--- a/src/pages/gym dashboard/GymDashboardPage.css
+++ b/src/pages/gym dashboard/GymDashboardPage.css
@@ -3,12 +3,12 @@
     height: 100%;
     overflow: hidden;
     display: flex;
+    flex-direction: column;
 }
 
 .gymDashboard .MainContainer {
     display: flex;
-    margin-top: 4.75%;
-    height: 100%;
+    height: 91%;
     width: 100%;
     /* border: 1px solid blue; */
     /* justify-content: center; */
