--- a/src/pages/member page/MemberProfile.css
+++ b/src/pages/member page/MemberProfile.css
@@ -1,5 +1,5 @@
 .memberProfileContainer {
-    margin: 0 1.5% 1.5% 1.5%;
+    margin: 1.5% 1.5% 1.5% 1.5%;
     width: 97%;
     border: 1px solid rgba(0, 0, 0, 0.15);
     border-radius: 12px;
@@ -46,7 +46,7 @@
 
 .memberProfileContainer .profile {
     margin: 0.35% auto 0.5% auto;
-    width: 96%;
+    width: 95%;
     /* border: 1px solid red; */
     padding-bottom: 1%;
     border-bottom: 1px solid rgba(17, 17, 17, 0.5);
@@ -63,7 +63,7 @@
 }
 
 .memberProfileContainer .profile .buttons {
-    margin-top: 5%;
+    margin-top: 2%;
     display: flex;
     gap: 1%;
 }
@@ -80,28 +80,4 @@
     border: 2px solid black;
     background-image: url("");
     background-size: cover;
-}
-
-.memberNavigationButtons {
-    width: 96%;
-    margin: 0.5% auto 0.5% auto;
-    display: flex;
-    justify-content: flex-start;
-    gap: 1%;
-}
-
-.memberNavigationButtons button {
-    padding: 0.5% 1%;
-    font-size: 1em;
-    border: 1px solid black;
-    border-radius: 9px;
-    background-color: #E5E5E5;
-    transition: all 0.3s;
-}
-
-.memberNavigationButtons button:hover {
-    padding: 0.5% 1%;
-    font-size: 1em;
-    background-color: #111;
-    color: #fff;
 }
