--- a/src/pages/member page/MemberActionContainer.css
+++ b/src/pages/member page/MemberActionContainer.css
@@ -1,8 +1,9 @@
 .memberNavigationButtons {
     width: 95%;
-    margin: 0.5% auto 0.5% auto;
+    margin: 0 auto 0 auto;
     display: flex;
     justify-content: flex-start;
+    align-items: center;
     gap: 1%;
 }
 
@@ -20,4 +21,11 @@
     font-size: 1em;
     background-color: #111;
     color: #fff;
+}
+
+.actionContainer {
+    margin: 0.5%;
+    width: 95%;
+    height: 100%;
+    border: 1px solid red;
 }
