--- a/src/pages/finance page/Card.css
+++ b/src/pages/finance page/Card.css
@@ -2,14 +2,14 @@
   flex: 1 1 22%;
   background-color: #ffffff;
   border-radius: 1rem;
-  box-shadow: 0 0.4rem 1rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0.2rem 0.8rem rgba(0, 0, 0, 0.15);
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 1.5% 2%;
   transition: all 0.3s ease;
   cursor: pointer;
-  min-width: 180px;
+  width:75%;
 }
 
 .summary-card:hover {
