--- a/src/pages/member page/Action Components/Membership/MembershipRecord.css
+++ b/src/pages/member page/Action Components/Membership/MembershipRecord.css
@@ -1,5 +1,6 @@
 .membershipRecordContainer {
-    width: 100%;
+    margin: 1%;
+    width: 95%;
     border-radius: 12px;
     border: 1px solid rgba(0, 0, 0, 0.15);
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
