Membership + Payment Component

--- a/src/pages/member page/Action Components/Membership/EditMembership.css
+++ b/src/pages/member page/Action Components/Membership/EditMembership.css
@@ -1,15 +1,15 @@
-.addMembershipRecord {
+.editMembershipRecord {
     width: 95%;
     /* border: 2px solid brown; */
     margin: 1% 1.5% 0.5% 1.5%;
-    border: 1px solid rgba(17, 17, 17, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 12px;
     background: #fff;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
     overflow: hidden;
 }
 
-.addMembershipRecordHeadSection {
+.editMembershipRecordHeadSection {
     width: 100%;
     padding: 0.5% 1.5%;
     background-color: #111;
@@ -21,7 +21,7 @@
     justify-content: space-between;
 }
 
-.addMembershipRecordHeadSection h1 {
+.editMembershipRecordHeadSection h1 {
     background-color: #111;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
@@ -30,18 +30,18 @@
     cursor: default;
 }
 
-.addMembershipRecordHeadSection .xMark {
+.editMembershipRecordHeadSection .xMark {
     color: #fff;
     transition: all 0.3s ease;
     cursor: pointer;
 }
 
-.addMembershipRecordHeadSection .xMark:hover {
+.editMembershipRecordHeadSection .xMark:hover {
     color: #ff4d4d;
     transform: scale(1.2, 1.2);
 }
 
-.addMembershipRecord .formContainer {
+.editMembershipRecord .formContainer {
     margin: 2.5% 1.5%;
     width: 100%;
     padding-bottom: 1.4%;
@@ -52,31 +52,31 @@
     justify-content: center;
 }
 
-.addMembershipRecord input {
+.editMembershipRecord input {
     padding: 0.2% 0.4%;
     margin-bottom: 0.4%;
     width: 95%;
     font-size: 1em;
 }
 
-.addMembershipRecord input::placeholder {
+.editMembershipRecord input::placeholder {
     font-weight: 100;
     color: rgba(0, 0, 0, 0.5);
 }
 
-.addMembershipRecord label {
+.editMembershipRecord label {
     font-size: 1em;
     font-weight: 500;
 }
 
-.addMembershipRecord select {
+.editMembershipRecord select {
     width: 40%;
     margin-left: 1%;
     font-size: 1em;
     font-weight: 400;
 }
 
-.addMembershipRecord .buttonContainer {
+.editMembershipRecord .buttonContainer {
     width: 15%;
     margin-top: 1%;
     font-size: 0.5em;
@@ -91,7 +91,7 @@
     align-self: end;
 }
 
-.addMembershipRecord .formContainer .buttonContainer button {
+.editMembershipRecord .formContainer .buttonContainer button {
     padding: 2.5% 3.5%;
     cursor: pointer;
 }
