--- a/src/pages/member page/Action Components/Membership/MembershipRecord.css
+++ b/src/pages/member page/Action Components/Membership/MembershipRecord.css
@@ -1,8 +1,8 @@
 .membershipRecordContainer {
-    margin: 1%;
+    margin: 0% 1% 1% 1%;
     width: 95%;
     border-radius: 12px;
-    border: 1px solid rgba(0, 0, 0, 0.15);
+    border: 1px solid rgba(17, 17, 17, 0.5);
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     /* display: flex; */
     /* justify-content: center; */
