--- a/src/pages/member page/MemberActionContainer.css
+++ b/src/pages/member page/MemberActionContainer.css
@@ -1,6 +1,6 @@
 .memberNavigationButtons {
     width: 95%;
-    margin: 0 auto 0 auto;
+    margin: 0 auto 0.5% auto;
     display: flex;
     justify-content: flex-start;
     align-items: center;
