--- a/src/pages/finance page/FinanceExpense.css
+++ b/src/pages/finance page/FinanceExpense.css
@@ -11,15 +11,24 @@
   align-items: center;
 }
 
-.expense-title {
-  background-color: #111;
-  color: #fff;
-  font-size: 20px;
-  font-weight: 600;
-  padding: 10px 20px;
-  border-radius: 10px 10px 0 0;
-  width: 100%;
-  margin-bottom: 20px;
+.expenseHeadSection{
+    width: 100%;
+    padding: 0.4% 1.5%;
+    background-color: #111;
+    color: #fff;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.expenseHeadSection h1 {
+    margin: 0%;
+    color: #fff;
+    font-size: 1.6em;
+    font-weight: 700;
+    
 }
 
 .expense-header {
@@ -31,6 +40,32 @@
   align-items: center;
   justify-content: space-between;
 }
+.date-filters {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+.date-filters-inline label {
+  display: flex;
+  flex-direction: column;
+  font-weight: 500;
+  color:#fff;
+}
+.date-filters label {
+  font-weight: 500;
+  color: #fff;
+} 
+.date-filters-inline input[type="date"] {
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  font-size: 0.8rem;
+  background-color: #111;
+  color: #fff;
+}
+
+
+
+
 
 .add-expense-btn {
   padding: 0.8%;
@@ -38,6 +73,7 @@
   margin: 1.5%;
   border: 2px solid #000;
 }
+
 
 .chart-container {
   width: 100%;
