--- a/src/pages/member page/AddMember.css
+++ b/src/pages/member page/AddMember.css
@@ -1,4 +1,5 @@
 .addMemberContainer {
+    /* position: fixed; */
     width: 97%;
     /* border: 2px solid brown; */
     margin: 1.5% 1.5% 1.5% 1.5%;
