--- a/src/components/NavbarContainer.css
+++ b/src/components/NavbarContainer.css
@@ -39,6 +39,10 @@ nav h1 {
 
 nav .profileContainer {
     cursor: pointer;
+    /* border: 1px solid red; */
+    width: 15%;
+    align-content: center;
+    justify-content: center;
 }
 
 nav .icon {
@@ -57,7 +61,7 @@ nav .icon {
     align-items: baseline;
     position: fixed;
     top: 6.8%;
-    right: 1.3%;
+    right: 2.5%;
     z-index: 1;
     cursor: pointer;
 }
