APIs Integration + CSS Set

--- a/src/pages/member page/Action Components/Membership/MembershipRecord.css
+++ b/src/pages/member page/Action Components/Membership/MembershipRecord.css
@@ -84,3 +84,13 @@
     padding: 1% 2%;
     cursor: pointer;
 }
+
+.membershipStatus-active {
+    color: #2e7d32;
+    font-weight: 600;
+}
+
+.membershipStatus-expired {
+    color: #dc3545;
+    font-weight: 600;
+}
