--- a/src/pages/member page/Action Components/Membership/Payment/PaymentDetails.css
+++ b/src/pages/member page/Action Components/Membership/Payment/PaymentDetails.css
@@ -1,7 +1,7 @@
 .paymentDetails {
     width: 96%;
     height: 15em;
-    margin: 0.5% 1% 1% 1%;
+    margin: 0% 1% 1% 1%;
     border: 1px solid rgba(17, 17, 17, 0.5);
     border-radius: 13px;
 }
@@ -73,4 +73,14 @@
     width: 25%;
     height: 50%;
     gap: 1%;
+}
+
+.paymentStatus-paid {
+    color: #2e7d32;
+    font-weight: 600;
+}
+
+.paymentStatus-pending {
+    color: #f57c00;
+    font-weight: 600;
 }
