--- a/src/pages/member page/MemberProfile.css
+++ b/src/pages/member page/MemberProfile.css
@@ -78,6 +78,14 @@
     height: 10.5em;
     /* margin: 1% 0% 1% 66%; */
     border: 2px solid black;
-    background-image: url("");
-    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.memberProfileContainer .imgSection img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
