--- a/src/pages/trainer page/TrainerPage.css
+++ b/src/pages/trainer page/TrainerPage.css
@@ -1,11 +1,11 @@
-.memberPageContainer {
+.trainerPageContainer {
     width: 100%;
     height: 100%;
     /* border: 2px solid blue; */
     overflow-y: auto;
 }
 
-.memberPageContainer .infoCardContainer {
+.trainerPageContainer .infoCardContainer {
     width: 100%;
     height: 20%;
     padding: 1% 0%;
