--- a/src/pages/login page/FormContainer.css
+++ b/src/pages/login page/FormContainer.css
@@ -6,6 +6,7 @@
 }
 
 .form input {
+    margin: 1.5% 0% 1.6% 0%;
     width: 70%;
     height: 25%;
     border: 1px solid black;
@@ -14,6 +15,15 @@
     color: black;
     font-size: 0.8em;
     padding: 2%;
+}
+
+.form p {
+    margin: 0% 15% 1.4%;
+    align-self: end;
+    color: rgb(24, 119, 201);
+    font-size: 0.8em;
+    font-weight: 500;
+    cursor: pointer;
 }
 
 .form .loginButton {
