--- a/src/pages/common dashboard/CardContainer.css
+++ b/src/pages/common dashboard/CardContainer.css
@@ -1,8 +1,9 @@
 .cardContainers {
-    width: 100%;
+    /* width: 100%; for both physio */
+    width: 65%;
     height: 100%;
     background-color: #fff;
-    border: 1px solid rgba(17, 17, 17, 0.3);
+    border: 1px solid rgba(17, 17, 17, 0.5);
     padding: 1%;
     border-radius: 10px;
     display: flex;
