--- a/src/pages/common dashboard/Cards.css
+++ b/src/pages/common dashboard/Cards.css
@@ -1,7 +1,8 @@
 .card {
-    width: 44%;
+    /* width: 44%;  for BOTH Physio*/
+    width: 32%;
     background-color: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.15);
+    border: 1px solid rgba(17, 17, 17, 0.3);
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
     overflow: hidden;
