--- a/src/pages/common dashboard/Notifications.css
+++ b/src/pages/common dashboard/Notifications.css
@@ -1,15 +1,17 @@
 .notificationContainer {
     height: 100%;
-    width: 40%;
+    /* width: 40%; for Both physio */
+    width: 35%;
     background-color: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.15);
+    border: 1px solid rgba(17, 17, 17, 0.3);
     border-radius: 10px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
 }
 
 .notificationContainer h3 {
     height: 7%;
-    width: 17.95%;
+    /* width: 17.95%; for both */
+    width: 21%;
     margin-bottom: 4%;
     padding: 0.1%;
     background-color: #111;
