--- a/src/pages/login page/FormContainer.css
+++ b/src/pages/login page/FormContainer.css
@@ -1,20 +1,22 @@
 .form {
-    height: 40%;
+    /* border: 2px solid green; */
+    height: 70%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
 }
 
 .form input {
-    margin: 1.5% 0% 1.6% 0%;
+    margin: 1% 0% 1.6% 0%;
     width: 70%;
-    height: 25%;
+    height: 20%;
     border: 1px solid black;
     border-radius: 3px;
     background-color: #fff;
     color: black;
     font-size: 0.8em;
-    padding: 2%;
+    padding: 1%;
 }
 
 .form p {
@@ -27,9 +29,8 @@
 }
 
 .form .loginButton {
-    width: 30%;
-    height: 50%;
-    padding: 1%;
+    width: 25%;
+    height: 15%;
     color: white;
     border: none;
     font-weight: lighter;
@@ -47,4 +48,24 @@ input::placeholder {
 
 .loginButton:hover {
     background-color: rgb(0, 144, 254);
+}
+
+@media (max-width:768px) {
+    .form {
+        justify-content: flex-start;
+        margin-top: 0%;
+    }
+
+    .form input {
+        margin: 1% 0% 1.6% 0%;
+        width: 85%;
+        height: 18%;
+        font-size: 0.72em;
+    }
+
+    .form .loginButton {
+        margin-top: 1%;
+        width: 25%;
+        height: 15%;
+    }
 }
