--- a/src/pages/login page/LoginContainer.css
+++ b/src/pages/login page/LoginContainer.css
@@ -5,4 +5,13 @@
     /* border: 2px solid black; */
     border-radius: 12px;
     box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.188);
+    display: flex;
+    flex-direction: column;
+}
+
+@media (max-width:768px) {
+    .loginContainer {
+        width: 85%;
+        height: 41%;
+    }
 }
