--- a/src/pages/login page/LoginPage.css
+++ b/src/pages/login page/LoginPage.css
@@ -1,7 +1,14 @@
 .window {
+    /* border: 2px solid red; */
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media (max-width: 768px) {
+    .window {
+        flex-direction: column;
+    }
 }
