--- a/src/pages/login page/LoginWelcomeContainer.css
+++ b/src/pages/login page/LoginWelcomeContainer.css
@@ -1,4 +1,5 @@
 .welcomeText {
+    /* border: 2px solid pink; */
     margin: 2%;
 }
 
@@ -12,4 +13,14 @@
     text-align: center;
     font-weight: bolder;
     font-size: 0.7em;
+}
+
+@media (max-width:768px) {
+    .welcomeText h1 {
+        font-size: 1.3em;
+    }
+
+    .welcomeText p {
+        font-size: 0.75em;
+    }
 }
