--- a/src/pages/login page/LoginHeadSection.css
+++ b/src/pages/login page/LoginHeadSection.css
@@ -15,3 +15,9 @@
 .loginHeadSection img {
     height: 70%;
 }
+
+@media (max-width: 600px) {
+    .loginHeadSection {
+        height: 14%;
+    }
+}
