--- a/src/pages/login page/FormContainer.css
+++ b/src/pages/login page/FormContainer.css
@@ -53,19 +53,24 @@ input::placeholder {
 @media (max-width:600px) {
     .form {
         justify-content: flex-start;
-        margin-top: 0%;
+        margin-top: 1%;
     }
 
     .form input {
-        margin: 1% 0% 1.6% 0%;
-        width: 85%;
+        margin: 1.2% 0% 1.6% 0%;
+        width: 83%;
         height: 18%;
         font-size: 0.72em;
     }
 
+    .form p {
+        font-size: 0.65em;
+    }
+
     .form .loginButton {
         margin-top: 1%;
-        width: 25%;
-        height: 15%;
+        width: 22%;
+        height: 14%;
+        font-size: 0.7em;
     }
 }
